<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TextViewNombre"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MasDetalles">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="601dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:layout_marginTop="30px"
                android:text="@string/et_Nombre" />

            <TextView
                android:id="@+id/TxtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40px"
                android:layout_marginTop="20px"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:layout_marginTop="20px"
                android:text="@string/et_Apellido" />

            <TextView
                android:id="@+id/TxtApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40px"
                android:layout_marginTop="20px"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30px"
                android:layout_marginTop="20px"
                android:text="@string/et_Telefono" />

            <TextView
                android:id="@+id/TxtTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40px"
                android:layout_marginTop="20px"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:layout_marginTop="20px"
                android:text="@string/et_Email" />

            <TextView
                android:id="@+id/TxtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40px"
                android:layout_marginTop="20px"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:layout_marginTop="20px"
                android:text="@string/et_Direccion" />

            <TextView
                android:id="@+id/TxtDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40px"
                android:layout_marginTop="20px"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:layout_marginTop="20px"
                android:text="@string/et_FechaNacimiento" />

            <EditText
                android:id="@+id/TxtFechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40px"
                android:layout_marginTop="20px"
                android:ems="10"
                android:inputType="date" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:layout_marginTop="20px"
                android:text="Nivel de estudios alcanzados" />

            <TextView
                android:id="@+id/TxtNivelEstudios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40px"
                android:layout_marginTop="20px"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:layout_marginTop="20px"
                android:text="Intereses " />

            <TextView
                android:id="@+id/TxtIntereses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40px"
                android:layout_marginTop="20px"
                android:text="TextView" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>